[package]
name = "zeco"
version = "0.5.3"
edition = "2021"

authors = ["Julian Büttner <git@julianbuettner.dev>"]
license = "MIT"
repository = "https://github.com/julianbuettner/swapvec"
readme = "README.md"
description = "zellij attach via the internet, peer to peer, end-to-end encrypted"

[dependencies]
anyhow = "1.0.95"
bincode = "1.3.3"
clap = { version = "4.5.27", features = ["derive"] }
directories = "6.0.0"
iroh = "1.0.0"
nix = { version = "0.30.1", features = ["user"] }
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["net", "signal"] }
tokio-util = { version = "0.7.18" }

[dev-dependencies]
tempfile = "3.27.0"
